welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:1: error: Missing closing brace `}' assumed here
while (!estFaceMur) {avance()}
^